--- a/Multivariate Homework.Rmd
+++ b/Multivariate Homework.Rmd
@@ -26,7 +26,7 @@ ordiplot(dune_pca, display = 'sp')
 orditorp(dune_pca, display = 'sp')
 
 dune_mds <- metaMDS(dune)
-plot(dunes_mds)
+plot(dune_mds)
 
 plot(dune_mds, type='n')
  text(dune_mds, 'sp', cex=.5)
@@ -51,9 +51,45 @@ dune.env$Use
 dune.env$Use <- factor(dune.env$Use, levels = c(Hayfield,Haypastu,Pasture), ordered = FALSE)
 
 dune.env$A1
+dune.env$Moisture <- factor(dune.env$Moisture, levels = c(1,2,4,5), ordered = FALSE)
 dune.env$Moisture
 
 dune.env$Management
 dune.env$Manure
 
+cca_dune <- cca(dune ~ ., data = dune.env)
+cca_dune
+RsquareAdj(cca_dune, 100)
+anova(cca_dune, permutations = 999)
+anova(cca_dune, by='margin', permutations = 999)
+plot(cca_dune, type='n', scaling=1)
+orditorp(cca_dune, display='sp', cex=0.5, scaling=1, col='blue')
+text(cca_dune, display='bp', col='red')
 ```
+1. The graphic shows that Moisture affects each individual species and the sites that they are found. This kind of graphic is used to show the differences in Moisture in the study site along the two axes. This can tell you what is pulling the data apart and separtating it. This plot shows that there are differences in the dataset, and that vegetation looks like it depends on Moisture.
+
+2. Code lines 65-67
+
+3. It seems like the overall message is the same for both models because generally, each explanatory factor points along a similar axis and each plot shows similar trends.
+Overall I think the CCA was more useful as it was easier to see the direction of the arrows and therefor analyse the plot easier.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
